# what_is_that

./: .gemini.toml  .gitignore  BLUEPRINT.md  Cargo.toml  GEMINI.md  README.md  build.rs  todo.txt
src/: main.rs
src/command_executor/: README.md  mod.rs
src/command_history/: README.md  mod.rs
src/gui/: README.md  app.rs  mod.rs  tab.rs  tab_bar.rs
src/shell/: mod.rs
src/shell/core/: CHANGELOG.md  README.md  command_executor.rs  external.rs  mod.rs
src/shell/core/builtins/: README.md  alias.rs  cat.rs  cd.rs  cp.rs  echo.rs  export.rs  grep.rs  mod.rs  rm.rs  unset.rs
src/shell/features/: git.rs  mod.rs
src/shell/features/autocompletion/: README.md  builtin_provider.rs  history_provider.rs  mod.rs  path_provider.rs
src/shell/history/: mod.rs
src/shell_core/: README.md  autocompletion.rs  cd.rs  command_executor.rs  external.rs  git.rs  mod.rs  open.rs  ping.rs
src/shell_core/autocompletion/: CHANGELOG.md  README.md  builtin_provider.rs  history_provider.rs  mod.rs  path_provider.rs
src/shell_core/builtins/: README.md  cd.rs  cp.rs  ls.rs  mkdir.rs  mod.rs  mv.rs  rm.rs
