[package]
name = "my_cli_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
egui = "0.28"
eframe = { version = "0.28", features = ["wgpu", "glow"] }
encoding_rs = "0.8.35"
num-traits = "0.2"
pnet = "0.35.0"
