[package]
name = "my_cli_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = "0.4"
crossterm = "0.27.0"
dunce = "1.0.4"
eframe = { version = "0.27.2", features = ["glow"] }
egui = "0.27.2"
egui-winit = "0.27.2"
encoding_rs = "0.8.33"
git2 = "0.18.1"
glium = "0.34.0"
image = "0.25.1"
lazy_static = "1.4.0"
open = "5.3.0"
pnet = "0.34.0"
rfd = "0.14.1"
shlex = "1.3.0"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
winit = "0.29.15"
raw-window-handle = "0.5"
regex = "1.10.4"

[dev-dependencies]
tempfile = "3.10.1"
